@@ -1,4 +1,4 @@
--update list of translations on website
+-update list of translations, contributor, import formats on website
 -Google analytics
 
 
